# asset-register

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Pipfile  README.md  entrypoint.sh  pyproject.toml
asset_register/: gunicorn.py  manage.py
asset_register/aadadmin/: admin.py  apps.py
asset_register/asset_register/: asgi.py  settings.py  urls.py  wsgi.py
asset_register/dashboard/: admin.py  apiurls.py  auth.py  azure.py  context_processors.py  models.py  urls.py  utils.py  views.py
asset_register/dashboard/migrations/: 0001_initial.py  0002_auto_20200601_0923.py  0003_auto_20200707_1059.py  0003_auto_20200707_1059_squashed_0007_auto_20200707_1138.py  0004_auto_20200707_1110.py  0004_auto_20200707_1520.py  0005_auto_20200707_1126.py  0006_auto_20200707_1127.py  0007_auto_20200707_1138.py
asset_register/static/: main.css
asset_register/templates/: active_assets.html  active_computer_assets.html  active_fobs_assets.html  active_misc_assets.html  add_asset.html  asset.html  azure_assets.html  base.html  disposed_assets.html
asset_register/templates/admin/: base.html  base_site.html
scripts/: current_computer_assets_tsv.py  disposed_assets_temp.py  disposed_assets_tsv.py  get_azure.py  individual_assets_tsv.py  jamf2ar.py  other_computer_assets_tsv.py
