[tool.poetry]
name = "asset_register"
version = "0.1.0"
description = "POC Asset register"
authors = ["Terry Cain <tcain@bink.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.6"
psycopg2 = "^2.8.5"
mozilla-django-oidc = "^1.2.3"
django-prometheus = "^2.0.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
