[tool.poetry]
name = "asset_register"
version = "0.1.0"
description = "POC Asset register"
authors = ["Terry Cain <tcain@bink.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.6"
mozilla-django-oidc = "^1.2.3"
django-prometheus = "^2.0.0"
gunicorn = "^20.0.4"
azure-mgmt-rdbms = "^2.2.0"
azure-mgmt-redis = "^6.0.0"
azure-mgmt-compute = "^13.0.0"
azure-mgmt-keyvault = "^2.2.0"
azure-mgmt-network = "^11.0.0"
azure-mgmt-frontdoor = "^0.3.0"

[tool.poetry.dev-dependencies]
psycopg2 = "^2.8.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
